# cmakeAndQtProject

./: README.md
QtProjectExample/qml_demo_Qpro_config/: CameraDemo.pro  DCamera.qml  README.md  main.qml  qml.qrc
QtProjectExample/qt_3dShape_Qpro_config/: README.md  basicshapes-cpp.pro  scenemodifier.cpp  scenemodifier.h
QtProjectExample/qt_cam_Qpro_config/: README.md  logutil.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  previewdisplay.cpp  previewdisplay.h  qtcam.pro
QtProjectExample/qt_img_video_Qpro_config/: README.md  mainwindow.cpp  qvision.pro
QtProjectExample/qt_opencv_Qpro_config/: README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_opencv_imshow.pro
QtProjectExample/qt_ros_Qpro_config/: README.md  main.cpp  qt_joy.pro
QtProjectExample/v4l2_grab_Qpro_config/: README.md  v4l2_grab.pro  v4l2grab.c
cmakeProjectExample/light_opencv_webcam_demo_cmake_config/: CMakeLists.txt  README.md  webcam_grapper.cpp
cmakeProjectExample/opencv_arucoTag_cmake_config/: CMakeLists.txt  CMakeLists.txt.user.e2e27b3  ChangeLog
cmakeProjectExample/opencv_helloworld_cmake_config/: CMakeLists.txt  HelloWorld.cpp  README.md
cmakeProjectExample/opengl_cmake_config/: CMakeLists.txt  README.md  test.c
cmakeProjectExample/qt_ros_cmake_config/: README.md
cmakeProjectExample/qt_v4l2_cmake_config/: CMakeLists.txt  README.md  v4l2Grapper.cpp
cmakeProjectExample/v4lDevCap_demo_cmake_config/: CMakeLists.txt  README.md  v4lDevCap.cpp
cmakeProjectExample/videoDevInfo_demo_cmake_config/: CMakeLists.txt  README.md  bash command  videoDevInfo.c
(+89 files in other folders)
